--- a/overview.html
+++ b/overview.html
@@ -7,7 +7,10 @@
   <body>
     Implementation of Valiant's Neuroidal model for a biologically motivated neural network
     and artificial intelligence system. 
-    <p> Design is augmented by usage of the Pulsed Neural Networks for spike behavior of individual neurons. Additional improvements include synchronized and oscialltory behavior as observed in neuron populations.
+    <p> Design is augmented by use of the Spike Response Model (SRM) of Gerstner for spike behavior of individual neurons [Gerstner, 99]. Additional improvements include synchronized and oscillatory behavior as observed in neuronal populations.<p>
+      <b>References:</b><p>
+      [Gerstner, 99] W. Gerstner. "Spiking Neurons" in W. Maass, C.M. Bishop (eds), <em>Pulsed Neural Networks</em>. Massachusetts Institute of Technology Press, pp. 3--54, 1999.
+
       @see Base.Network
   </body>
 </html>
