--- a/overview.html
+++ b/overview.html
@@ -9,8 +9,8 @@
     and artificial intelligence system. 
     <p> Design is augmented by use of the Spike Response Model (SRM) of Gerstner for spike behavior of individual neurons [Gerstner, 99]. Additional improvements include synchronized and oscillatory behavior as observed in neuronal populations.<p>
       <b>References:</b><p>
-      [Gerstner, 99] W. Gerstner. "Spiking Neurons" in W. Maass, C.M. Bishop (eds), <em>Pulsed Neural Networks</em>. Massachusetts Institute of Technology Press, pp. 3--54, 1999.
-
+      [Gerstner, 99] W. Gerstner. "Spiking Neurons" in W. Maass, C.M. Bishop (eds), <em>Pulsed Neural Networks</em>. Massachusetts Institute of Technology Press, pp. 3--54, 1999.<p>
+      [Valiant, 94] Leslie G. Valiant. <em>Circuits of The Mind</em>. Oxford University Press. 1994.
       @see Base.Network
   </body>
 </html>
