--- a/ntr/package.html
+++ b/ntr/package.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html>
   <head>
-    <title>Base package</title>
+    <title>neuroidnet.ntr package</title>
   </head>
 
   <body>
@@ -10,7 +10,7 @@
     <p>Created by <a href="mailto:cengiz@ull.edu">Cengiz Gunay</a><br>
 <!-- Created: Sun Oct 21 23:10:27 CDT 2001 -->
 <!-- hhmts start -->
-Last modified: Sun Oct 21 23:22:48 CDT 2001
+Last modified: Mon Apr 15 14:31:39 CDT 2002
 <!-- hhmts end -->
   </body>
 </html>
