Minor changes/documentation.

--- a/periphery/package.html
+++ b/periphery/package.html
@@ -7,6 +7,6 @@
   <body>
 
     Holds classes related to the peripheral controller of the neuroidal network.
-    @see Base.Peripheral
+    @see neuroidnet.ntr.Peripheral
   </body>
 </html>
